# ocaml-recursion-schemes

./: .gitignore  .ocamlinit  README.md  action.ml  dune  dune-project  examples.ml  examples1.ml  part1.ml  part2.ml  plant.ml  recursion.opam  recursion_schemes.opam  seed.ml  seed.mli
examples/change/: README.md  change.ml  dune
examples/change/lib/: change.ml  dune
examples/change/tests/: change_test.ml  dune
examples/plant/: .ocamlinit  README.md  dune  plant.ml
examples/plant/lib/: action.ml  dune  plant.ml  seed.ml  seed.mli
examples/plant/tests/: dune  plant_test.ml
lib/base_functor/: base_functor.ml  dune
lib/monad/: Monad.ml  MonadBase.ml  State.ml  dune
lib/recursion/: Corecursion.ml  Embed.ml  Functor.ml  ListRec.ml  Project.ml  Recursion.ml  Schemes.ml  Schemes2.ml  dune
lib/recursion_schemes_ppx/: dune  recursion_schemes_ppx.ml
test/: base_functor_tests.ml  ctor_params012_test.ml  dune  list_test.ml  nat_test.ml  tree_test.ml
