(lang dune 3.20)
(name recursion)
(package
 (name recursion)
 (synopsis "recursion schemes for OCaml")
 (description "recursion schemes for OCaml")
 (maintainers "Klaus Andrey <klaus.ai1983@gmail.com>")
 (authors "Klaus Andrey <klaus.ai1983@gmail.com>")
 (depends
  (ocaml (= 5.2.1))
  (core (>= 0.17.1))
  (ppx_deriving (>= 6.0.3))
  (ppxlib (>= 0.35.0))
  (ppx_expect :with-test)
  (alcotest :with-test)))
(generate_opam_files true)
