(lang dune 3.20)
(name recursion_schemes)
(package
 (name recursion_schemes)
 (synopsis "recursion schemes for OCaml")
 (description "recursion schemes for OCaml")
 (maintainers "Klaus Andrey <aklaus.code@gmail.com>")
 (authors "Klaus Andrey <aklaus.code@gmail.com>")
 (depends
  (ocaml (= 5.2.1))
  (core (>= 0.17.1))
  (ppx_deriving (>= 6.0.3))
  (ppxlib (>= 0.35.0))
  (ppx_expect :with-test)
  (alcotest :with-test)))
(generate_opam_files true)
